tests/machine/x/java/map_in_operator.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmap_in_operator3245315238/001/Main.java:5: error: ')' or ',' expected
	System.out.println(1 in m);
	                    ^
/tmp/TestCompileValidProgramsmap_in_operator3245315238/001/Main.java:5: error: ';' expected
	System.out.println(1 in m);
	                         ^
/tmp/TestCompileValidProgramsmap_in_operator3245315238/001/Main.java:6: error: ')' or ',' expected
	System.out.println(3 in m);
	                    ^
/tmp/TestCompileValidProgramsmap_in_operator3245315238/001/Main.java:6: error: ';' expected
	System.out.println(3 in m);
	                         ^
4 errors


  1| let m = {1: "a", 2: "b"}
  2| print(1 in m)
